# FarmChain

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: contracts.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: index.ts
backend/src/db/: migrate.sql  schema.sql
backend/src/middleware/: auth.ts
backend/src/routes/: admin.ts  auth.ts  disputes.ts  messages.ts  notifications.ts  orders.ts  products.ts  receipts.ts  recurring.ts  reviews.ts  users.ts  wishlist.ts
contracts/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/escrow/test_snapshots/test/: test_create_order_locks_funds.1.json  test_dispute_and_resolve_full_refund.1.json  test_dispute_and_resolve_full_to_farmer.1.json  test_full_happy_path.1.json
contracts/marketplace/src/: lib.rs  test.rs
contracts/marketplace/test_snapshots/test/: test_delist_product.1.json  test_get_farmer_products.1.json  test_list_product.1.json  test_multiple_products_increment_id.1.json  test_update_product.1.json
contracts/registry/src/: lib.rs  test.rs
contracts/registry/test_snapshots/test/: test_deactivate_user.1.json  test_duplicate_registration_fails.1.json  test_register_buyer.1.json  test_register_farmer.1.json  test_update_metadata.1.json
docs/: BUGS_AND_IMPROVEMENTS.md  BUYER_EXPERIENCE_PLAN.md  FARMER_DASHBOARD_V2.md  PLAN.md  wallet-dropdown-settings-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/: deploy.sh  fund-testnet.sh  init-contracts.mjs
(+50 files in other folders)
