[workspace]
members = ["registry", "marketplace", "escrow"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
